hphp/test/slow/await_as_an_expression/error/fn_call4.php.expectf

Fatal error: Await cannot be used as an expression in this location because it's conditionally executed. in %s/fn_call4.php on line 22
